--- a/wp-content/themes/understrap-child/sass/theme/modules/generics.scss
+++ b/wp-content/themes/understrap-child/sass/theme/modules/generics.scss
@@ -1,3 +1,8 @@
+body {
+	overflow: hidden;
+	width: 100vw;
+}
+
 button {
 	background-color: transparent;
 	border: none;
